demoproject_2/src/objects/Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Improvements_Needed__c</fullName>
        <label>Improvements Needed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Comments__c</fullName>
        <label>Overall Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Session_ID__c</fullName>
        <label>Session_ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <label>Session</label>
        <referenceTo>Session__c</referenceTo>
        <relationshipLabel>Feedback</relationshipLabel>
        <relationshipName>Feedback</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>What_was_the_session_like__c</fullName>
        <label>What did you like</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Session_ID__c</columns>
        <columns>What_was_the_session_like__c</columns>
        <columns>Improvements_Needed__c</columns>
        <columns>Overall_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Feedback Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feedback</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>